# radio_configs

./: .gitignore  LICENSE  Makefile  NOTICE  README.md  SSRF-SOURCING.md  generate_dm32_channels.py  generate_opengd_import.py  generate_ssrf_docs.py  generate_ssrf_schema.py  opengd_import_csv_file_rules.txt  pyproject.toml  update-docs.sh
DM32_reference/factory_export/: DM32_Zone.csv
backups/: .gitkeep
backups/n76-vero/: .gitkeep  README.md  n76-full-backup-20260711-235149.json
docs/policies/: README.md  berrien_county_amateur.md  berrien_county_public_safety.md  business_itinerant.md  chicago_businesses_northside.md  chicago_public_services.md  chicago_transit.md  chicagoland_dmr.md  family_channels.md  florida_simulcast_group.md  gmrs_channels.md  ham_fm_simplex.md  laporte_in_services.md  marine_vhf.md  ns9rc.md  (+10 more)
groups/: README.md  aprs_vhf.yml  chicago_2m_repeaters.yml  chicago_70cm_repeaters.yml  chicago_gmrs.yml  family_net.yml  marine_vhf.yml  noaa_weather.yml  packet_vhf.yml  simplex_2m.yml  simplex_70cm.yml
opengd77_cps_import_generated/: TG_Lists.csv  Zones.csv
policies/: berrien_county_amateur.yml  berrien_county_public_safety.yml  cfmc_repeaters.yml  chicago_public_services.yml  family_channels.yml  gmrs_channels.yml  laporte_in_services.yml  marine_vhf.yml  mmdvm_duplex_hotspot.yml  ns9rc.yml  pmr446.yml  rail_aar_scan.yml  st_pete_gmrs_repeaters.yml  tampa_amateur_radio_club.yml  wcars.yml
profiles/: default.yml  gmrs_only.yml  rolling_prairie_in.yml
radios/: README.md  n76-vero.yml
tests/: __init__.py  test_interop.py  test_profiles.py
(+55 files in other folders)
