[project]
name = "chicago-opengd77-generator"
version = "0.1.0"
description = "Generate OpenGD77 CSVs from SSRF-Lite YAML systems"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
]
authors = [
    { name = "Eric Muehlstein", email = "muehlbucks@gmail.com" },
]
dependencies = [
    "pyyaml>=6.0.1",
    "pydantic>=2.6,<3",
]

[dependency-groups]
dev = [
    "jsonschema>=4.20",
]
